--- a/Aula10/Aula11/ex0010.html
+++ b/Aula10/Aula11/ex0010.html
@@ -16,10 +16,14 @@
     <script>
         function calcular(){
             var txtvel = window.document.getElementById('txtvel')
-            var vel = Number(txt.value)
+            var vel = Number(txtvel.value)
             var res = window.document.getElementById('res')
-            res.innerHTML = `Sua velocidade atual é de ${vel}`
+            res.innerHTML = `<p>Sua velocidade atual é de <strong>${vel} Km/h</strong></p>`
+            if (vel > 60) { 
+                res.innerHTML += `<p> Você está <strong>MULTADO</strong> por excesso de velocidade`
 
+            }
+            res.innerHTML += `<p>Dirija sempre com o cinto de segurança!</p>`
 
         }
     </script>
