--- a/Aula10/Aula11/ex0010.html
+++ b/Aula10/Aula11/ex0010.html
@@ -20,7 +20,7 @@
             var res = window.document.getElementById('res')
             res.innerHTML = `<p>Sua velocidade atual é de <strong>${vel} Km/h</strong></p>`
             if (vel > 60) { 
-                res.innerHTML += `<p> Você está <strong>MULTADO</strong> por excesso de velocidade`
+                res.innerHTML += `<p> Você está <strong>MULTADO</strong> por excesso de velocidade</p>`
 
             }
             res.innerHTML += `<p>Dirija sempre com o cinto de segurança!</p>`
