--- a/ex015/ex014eufiz.html
+++ b/ex015/ex014eufiz.html
@@ -15,17 +15,15 @@
     <section>
         <div>
             <p>Ano de Nascimento:
-                <input type="number" name="txtano" id="txtano" min="0"> <!---- input para preencher com o ano daqui é o FANO do JS -->
-            </p>
+            <input type="number" name="txtano" id="txtano" min="0"> <!---- input para preencher com o ano daqui é o FANO do JS -->
         <p>Sexo: 
             <input type="radio" name="radsex" id="mas"> <!----Input radio é a bolotinha-->
             <label for="mas">Masculino</label> <!---- nome para o Masculino-->
             <input type="radio" name="radsex" id="fem">
-            <label for="fem">Feminino</la bel> <!---- nome para o Feminino -->
+            <label for="fem">Feminino</label> <!---- nome para o Feminino -->
         </p>
-            <p>
-                <input type="button" value="Verificar" onclick="verificar()"> <!----- quando eu clicar em verificar ele vai disparar um evento verificar-->
-            </p>
+            <p><input type="button" value="Verificar" onclick="verificar()"> <!----- quando eu clicar em verificar ele vai disparar um evento verificar-->
+            </p> 
         </div>
         <div id="res">
             Preencha os dados acima para ver o resultado!
