--- a/Aula14ex/ex17/ex014eufiz.html
+++ b/Aula14ex/ex17/ex014eufiz.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
     </header>   
 
     <section>
         <div>
-            Testando...
+            <p>Número: <input type="number" name="txt1 " id="txt1"> 
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
+            
         </div>
         <div>
-            Olá!
+            <select name="tabuada" id="seletab"></select> 
         </div>
     </section>
 
